@@ -7,6 +7,7 @@ MANIFEST.SKIP
 README
 README.md
 t/00-load.t
+t/30-basics.t
 t/boiler.t
 t/changes.t
 t/comment-spelling.t
@@ -18,6 +19,7 @@ t/eof.t
 t/eol.t
 t/gv.t
 t/kwalitee.t
+t/lib/Log/Dispatch/Buffer.pm
 t/log4perl.t
 t/logany.t
 t/logdispatch.t
